# fileglancer

./: .copier-answers.yml  .gitignore  .prettierignore  CLAUDE.md  README.md  RELEASE.md  clean.sh  conftest.py  environment.yml  install.json  jest.config.js  lefthook.yml  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tailwind.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.test.json  vite.config.ts
.github/workflows/: build.yml  check-release.yml  update-integration-tests.yml
binder/: environment.yml  postBuild
docs/: AuthoringApps.md  Development.md  Release.md  config.yaml.template
fileglancer/: __init__.py  alembic.ini  app.py  apps.py  cli.py  database.py  dev_launch.py  filestore.py  handlers.py  manifest_adapters.py  model.py  paths.py  proxiedpath.py  server.py  settings.py  sshkeys.py  tickets.py  uimodels.py
fileglancer/alembic/versions/: 483b2e31b85e_add_container_args_column.py  a3d7cc6e95e8_.py  a3f7c2e19d04_add_jobs_table.py  b5e8a3f21c76_add_entry_point_type_to_jobs.py
fileglancer/apps/: __init__.py  adapters.py  core.py  nextflow.py  pixi.py
fileglancer/tests/: test_filestore.py  test_handlers.py  test_localfilesharepaths.py  test_mock_server.py  test_proxiedpath.py
fileglancer_frontend_ext/: __init__.py
fileglancer_server/: __init__.py  filestore.py  handlers.py
fileglancer_server/tests/: __init__.py  test_filestore.py  test_handlers.py
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  shared.types.ts
frontend/src/__tests__/componentTests/: DataLinkTabs.test.tsx  N5MetadataTable.test.tsx
frontend/src/__tests__/unitTests/: fileBinaryPreviewQuery.test.tsx  hexDump.test.tsx  n5MissingAttributeHints.test.ts  sshKeyGen.test.ts
frontend/src/components/: AppJobs.tsx  AppLaunch.tsx  Apps.tsx  ErrorFallback.tsx  Help.tsx  JobDetail.tsx  Login.tsx  NGLinks.tsx  Notifications.tsx  Preferences.tsx  SSHKeys.tsx
frontend/src/components/tours/: StartTour.tsx  tourSteps.ts
frontend/src/contexts/: ExternalBucketContext.tsx  FileBrowserContext.tsx  PreferencesContext.tsx
frontend/src/hooks/: useDarkMode.ts  useFileSelector.ts
frontend/src/layouts/: BrowseLayout.tsx  OtherPagesLayout.tsx
frontend/src/queries/: appsQueries.ts  fileContentQueries.ts  jobsQueries.ts  n5Queries.ts  preferencesQueries.ts  zarrQueries.ts
frontend/src/utils/: appUrls.ts  bcryptPbkdf.ts  index.ts  sshKeyGen.ts
frontend/ui-tests/mocks/: zarrDirs.ts
frontend/ui-tests/tests/: data-link-operations.spec.ts  data-link-table-filtering.spec.ts  data-link-usage-tabs.spec.ts  symlink-navigation.spec.ts
frontend/ui-tests/utils/: navigation.ts
hub_launcher/: hub_launcher.py  jupyter_config.py  jupyter_server_config.py  jupyterhub_config.py
hub_launcher/templates/: page.html
jupyter-config/server-config/: fileglancer_server.json
src/: App.tsx  Home.tsx  handler.ts  index.css  index.ts  logger.ts  omezarr-helper.ts  shared.types.ts  utils.ts  widget.tsx
src/__tests__/: fileglancer.spec.ts  fileglancer_frontend_ext.spec.ts  pathHandling.test.ts  test-utils.tsx
src/__tests__/componentTests/: ChangePermissions.test.tsx  ConvertFile.test.tsx  DataLink.test.tsx  DeleteDialog.test.tsx  Sidebar.test.tsx
src/__tests__/mocks/: handlers.ts
src/__tests__/unitTests/: pathHandling.test.ts
src/components/: Browse.tsx  Cards.tsx  ErrorFallback.tsx  FileBrowser.tsx  FileList.tsx  Files.tsx  Help.tsx  Home.tsx  Jobs.tsx  Links.tsx  Navbar-shad.tsx  Navbar.tsx  NavigateInput.tsx  Notifications.tsx  Preferences.tsx  Shared.tsx  Sharing.tsx  TestComponent.tsx  Toggle.tsx
src/components/file-list/: FileListCrumbs.tsx
src/components/ui/: Beta.tsx  CustomCheckbox.tsx  FileContextMenu.tsx  FileControlPanel.tsx  FileList.tsx  FileListCrumbs.tsx  FileOverviewTable.tsx  FilePermissionTable.tsx  FilePropertiesDrawer.tsx  FilePropertiesPanel.tsx  FileSidebar.tsx  Loader.tsx  Navbar.tsx  Notifications.tsx  Sidebar.tsx  SidebarFavorites.tsx  SidebarZones.tsx  dropdown-menu.tsx  navigation-menu.tsx
src/components/ui/BrowsePage/: Crumbs.tsx  DashboardCard.tsx  DataToolLinks.tsx  FileBrowser.tsx  FileList.tsx  FileRow.tsx  FileTable.tsx  FileViewer.tsx  NavigateInput.tsx  NavigationButton.tsx  (+4 more)
src/contexts/: CentralServerHealthContext.tsx  ExternalBucketContext.tsx  FileBrowserContext.tsx  NotificationsContext.tsx  PreferencesContext.tsx  ProfileContext.tsx  ProxiedPathContext.tsx  SharedPathsContext.tsx  TicketsContext.tsx  ZoneBrowserContext.tsx  ZonesAndFspMapContext.tsx
src/hooks/: useCentralVersion.ts  useContextMenu.ts  useConvertFileDialog.ts  useCopiedTooltip.ts  useCopyPath.ts  useDataLinkDialog.ts  useDataToolLinks.ts  useDeleteDialog.ts  useDisplayOptions.ts  useFavoriteToggle.ts  useFileBrowser.ts  useFileBrowser.tsx  useFileList.tsx  useFilteredZonesAndFavorites.ts  useHandleDownload.ts  useHandleFileSharePathClick.ts  useHandleLeftClick.ts  useHandlePathClick.ts  useHideDotFiles.ts  useLayoutPrefs.ts  useLocalPathPreference.ts  useMakeNewFolder.ts  useNamingDialog.ts  useNavigationInput.ts  useNewFolderDialog.ts  useOpenFavorites.ts  useOpenZones.ts  usePermissionsDialog.ts  usePreferences.ts  useProfile.ts  usePropertiesTarget.ts  useProxiedPathRow.ts  useRenameDialog.ts  useSearchFilter.ts  useSelectedFiles.ts  useShowFilePropertiesDrawer.ts  useTheme.ts  useToggleOpenZones.ts  useToolbar.ts  useZarrMetadata.ts  (+1 more)
src/layouts/: BrowseLayout.tsx  FilesLayout.tsx  MainLayout.tsx  OtherPagesLayout.tsx
src/utils/: centralServerHealth.ts  copyText.ts  enhancedFetch.ts  errorHandling.ts  index.ts  pathHandling.ts  proxiedPaths.ts  toolUrls.ts
style/: base.css  index.js  tailwind.css  tailwind_converted.css
tests/: test_apps.py  test_config_template.py  test_endpoints.py  test_filestore.py  test_sshkeys.py
ui-tests/: jupyter_server_test_config.py  package-lock.json  package.json  playwright.config.js
ui-tests/tests/: fgzones.spec.ts  fileglancer.spec.ts  fileglancer_frontend_ext.spec.ts  fileglancer_server.spec.ts  localzone.spec.ts  testutils.ts
(+133 files in other folders)
