[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<5", "hatch-nodejs-version>=0.3.2"]
build-backend = "hatchling.build"

[project]
name = "fileglancer"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "jupyter_server>=2.4.0,<3"
]
dynamic = ["version", "description", "authors", "urls", "keywords"]

[project.optional-dependencies]
test = [
    "coverage",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-jupyter[server]>=0.6.0",
    "pydantic"
]

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls", "keywords"]

[tool.hatch.build.targets.sdist]
artifacts = ["fileglancer/labextension"]
exclude = [".github", "binder"]

[tool.hatch.build.targets.wheel.shared-data]
"fileglancer/labextension" = "share/jupyter/labextensions/fileglancer"
"install.json" = "share/jupyter/labextensions/fileglancer/install.json"
"jupyter-config/server-config" = "etc/jupyter/jupyter_server_config.d"

[tool.hatch.build.hooks.version]
path = "fileglancer/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "fileglancer/labextension/static/style.js",
    "fileglancer/labextension/package.json",
]
skip-if-exists = ["fileglancer/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "fileglancer/labextension"

[tool.jupyter-releaser.options]
version_cmd = "hatch version"

[tool.jupyter-releaser.hooks]
before-build-npm = [
    "python -m pip install 'jupyterlab>=4.0.0,<5'",
    "jlpm",
    "jlpm build:prod"
]
before-build-python = ["jlpm clean:all"]

[tool.check-wheel-contents]
ignore = ["W002"]


[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "osx-64"]

[tool.pixi.pypi-dependencies]
fileglancer = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["test"], solve-group = "default" }

[tool.pixi.tasks]
dev-install = "pip install -e ."
clean = "rm -rf node_modules && rm yarn.lock && jupyter server extension disable fileglancer && pip uninstall fileglancer"
initialize = "jlpm install"
clean-dev-install = { depends-on = ["clean", "initialize", "dev-install"] }
overwrite-ext = "jupyter labextension develop . --overwrite"
enable-ext = { cmd = "jupyter server extension enable fileglancer", depends-on = ["overwrite-ext"] }
build = "jlpm build"
dev-build = {cmd = "jlpm watch", depends-on = ["enable-ext"], inputs=['src/**/*.js', 'src/**/*.jsx', 'src/**/*.ts', 'src/**/*.tsx']}
dev-launch = "jupyter lab --autoreload"
uninstall = "pip uninstall fileglancer"

[tool.pixi.dependencies]
copier = "~=9.2"
jinja2-time = ">=0.2.0,<0.3"
jupyterlab = ">=4.3.0"
nodejs = ">=22.13.0,<23"
pytest = ">=8.3.4,<9"
pytest-check-links = ">=0.10.1,<0.11"
pytest-jupyter = ">=0.10.1,<0.11"
python = ">=3.13.2,<4"
pip = ">=25.0.1,<26"
pydantic = ">=2.10.6,<3"

